<resources>
    <string name="web_client_id">23662297536-327eqk9vhll7o7q86qgsrlhmm8pel0u0.apps.googleusercontent.com</string>
    <string name="app_name">Socialify</string>
    <string name="welcome_screen_next">Sentuh untuk melanjutkan</string>
    <string name="next_button">Selanjutnya</string>
    <string name="app_statement_one">Temukan berbagai komunitas dengan hobi dan minat yang sama</string>
    <string name="app_statement_two">Tampilan review kepengurusan dan form pengeluaran</string>
    <string name="app_statement_three">Tersedia berbagai event yang menarik</string>
    <string name="sign_in">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="forgot_password">Lupa Kata Sandi</string>
    <string name="sign_in_with_google">Masuk dengan Google</string>
    <string name="account_no_exist">Belum punya akun?</string>
    <string name="sign_up_now">Daftar Sekarang</string>
    <string name="account_exist">Sudah punya akun?</string>
    <string name="sign_in_now">Masuk Sekarang</string>
    <string name="password_remembered">Sudah ingat kata sandi?</string>
    <string name="or">atau</string>
    <string name="sign_up_description">Temukan berbagai komunitas dengan hobi dan minat yang sama</string>
    <string name="sign_in_description">Masuk ke akun Anda</string>
    <string name="welcome_message">Selamat Datang</string>
    <string name="name">Nama</string>
    <string name="name_hint">Masukkan nama lengkap Anda</string>
    <string name="email">Email</string>
    <string name="email_hint">Masukkan email Anda</string>
    <string name="password">Kata Sandi</string>
    <string name="password_hint">Masukkan kata sandi Anda</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="confirm_password_hint">Masukkan kembali kata sandi Anda</string>
    <string name="forgot_password_suggestion">Lupa kata sandi?</string>
    <string name="forgot_password_description">Masukkan email untuk mengatur ulang kata sandi</string>
    <string name="email_confirmation_description">Masukkan kode konfirmasi yang dikirmkan ke %1$s</string>
    <string name="email_confirmation">Konfirmasi Email</string>
    <string name="confirm">Konfirmasi</string>
    <string name="reset_password">Atur Ulang Kata Sandi</string>
    <string name="reset_password_description">Untuk mengganti kata sandi, masukkan kata sandi yang baru</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="new_password_hint">Masukkan kata sandi baru Anda</string>
    <string name="new_password_confirm">Konfirmasi Kata Sandi Baru</string>
    <string name="new_password_confirm_hint">Masukkan kembali kata sandi yang baru</string>
    <string name="resend_code">Kirim kode kembali</string>
    <string name="resend_code_with_time">Kirim kode kembali (%1$d)</string>
    <string name="wrong_password">Kata sandi yang Anda masukkan salah</string>
    <string name="code_confirmation">Konfirmasi Kode</string>
    <string name="code_confirmation_hint">Masukkan kode konfirmasi Anda</string>
    <string name="change_password">Ganti Kata Sandi</string>
    <string name="success_change_password">Kata sandi berhasil diganti</string>
    <string name="go_to_sign_in">Pergi ke laman Masuk</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profil</string>
    <string name="description_search_fragment">Temukan berbagai komunitas di sini</string>
    <string name="keyword_insert_hint">Masukkan kata kunci</string>
    <string name="search">Cari</string>
    <string name="explore">Jelajahi</string>
    <string name="explore_description">PIlih hobi dan minat yang sesuai dengan kamu</string>
    <string name="skip">Lewati</string>
    <string name="template_explore_title">Explore Title</string>
    <string name="template_community_title">Community Title</string>
    <string name="template_community_members">Community members</string>
    <string name="template_community_rating">Community rating</string>
    <string name="template_community_category">Community category</string>
    <string name="create_community">Buat Komunitas</string>
    <string name="leaderboard_community">Papan Peringkat Komunitas</string>
    <string name="community_recommendation">Rekomendasi Komunitas</string>
    <string name="community_recommendation_desc">Sesuai minat kamu</string>
    <string name="join">Gabung</string>
    <string name="find_more">Temukan lebih banyak</string>
    <string name="detail">Detail</string>
    <string name="title_search">Pencarian</string>
    <string name="search_result_for">Hasil pencarian untuk</string>
    <string name="search_result">Hasil Pencarian</string>
    <string name="name_example_1">Abdul Hamid</string>
    <string name="description_example_1">Aku adalah seorang pria yang menyukai kegelapan. Kegelapan adalah sebuah mahakarya Tuhan yang sangat agung. Kegelapan menciptakan diriku menjadi seorang lelaki tangguh seperti Master Character di game. Mencari seseorang dengan kriteria cantik, tajir melintir, dan punya banyak waktu untuk membangun rumah tangga bersama. Foto asli, bukan maling dari Pinterest. Senang menjaga ucapan. Menfess? Maksudmu ajang menyebar aib?</string>
    <string name="title_interest">Ketertarikan</string>
    <string name="nothing">Tidak ada</string>
    <string name="title_birthdate">Tanggal Lahir</string>
    <string name="birthdate_example_1">16 April 1982</string>
    <string name="city_place_example_1">Jakarta, Indonesia</string>
    <string name="title_born_place">Tempat Lahir</string>
    <string name="title_city_place">Tempat Singgah</string>
    <string name="title_settings">Pengaturan</string>
    <string name="private_account">Akun Privat</string>
    <string name="sign_out">Keluar Akun</string>
    <string name="question_1_desc">Apa alasanmu bergabung dengan komunitas ini?</string>
    <string name="question_2_desc">Apa yang kamu harapkan setelah bergabung dengan komunitas ini?</string>
    <string name="type_your_answer">Ketik jawabanmu</string>
    <string name="title_community_information">Informasi Komunitas</string>
    <string name="title_community_join_request">Permintaan Bergabung</string>
    <string name="title_discussion_forum">Forum Diskusi</string>
    <string name="example_community_title_1">Programmer Forum</string>
    <string name="title_community_menu">Menu Komunitas</string>
    <string name="title_community_members">Anggota Komunitas</string>
    <string name="title_community_admin_moderator"><![CDATA[Admin & Moderator]]></string>
    <string name="title_community_events">Event Komunitas</string>
    <string name="title_community_reviews">Peninjauan Komunitas</string>
    <string name="title_community_exit">Keluar Komunitas</string>
    <string name="community_review_stars_1">1</string>
    <string name="community_review_stars_2">2</string>
    <string name="community_review_stars_3">3</string>
    <string name="community_review_stars_4">4</string>
    <string name="community_review_stars_5">5</string>
    <string name="message_great">Hebat</string>
    <string name="description_form_on_complete">Kamu telah selesai meninjau komunitas ini. Setiap ulasan akan dipertimbangkan untuk komunitas ini. Kami akan mengirimkan pemberitahuan kepada pemilik dan moderator untuk setiap dampak yang mungkin terjadi.</string>
    <string name="back_to_community_menu">Kembali ke Menu Komunitas</string>
    <string-array name="data_explore_title">
        <item>Permainan</item>
        <item>Sosial dan Politik</item>
        <item>Fotografi</item>
        <item>Pemrograman</item>
        <item>Horor dan Misteri</item>
        <item>Hewan Peliharaan</item>
        <item>Pecinta Alam</item>
        <item>Seni dan Kartun</item>
        <item>Makanan</item>
        <item>Kesehatan</item>
        <item>Olahraga</item>
        <item>Film dan Buku</item>
    </string-array>
    <string-array name="data_community_leaderboard_title">
        <item>Programmer Forum</item>
        <item>Programming is FUN</item>
        <item>Geek and Program</item>
    </string-array>
    <string-array name="data_community_leaderboard_total_members">
        <item>7.3k anggota</item>
        <item>10.6k anggota</item>
        <item>1k anggota</item>
    </string-array>
    <string-array name="data_community_leaderboard_rating">
        <item>4.8</item>
        <item>4.6</item>
        <item>4.1</item>
    </string-array>
    <string-array name="data_community_leaderboard_category">
        <item>#pemrograman</item>
        <item>#pemrograman</item>
        <item>#pemrograman</item>
    </string-array>
    <string-array name="sort_by_array">
        <item>Rating tertinggi</item>
        <item>Anggota terbanyak</item>
        <item>Minat</item>
    </string-array>
    <string-array name="data_community_recommendation_title">
        <item>Programmer Forum</item>
        <item>GAMER FF SENGGOL</item>
        <item>Programming is FUN</item>
        <item>Geek and Program</item>
    </string-array>
    <string-array name="data_community_recommendation_members">
        <item>7.3k</item>
        <item>1.5k</item>
        <item>10.6k</item>
        <item>1k</item>
    </string-array>
    <string-array name="data_community_recommendation_rating">
        <item>4.8</item>
        <item>4.1</item>
        <item>4.6</item>
        <item>4.1</item>
    </string-array>
    <string-array name="data_notification_title">
        <item>Asus Syamsudin menanggapi postingan Anda</item>
        <item>Abdul Hamid mengomentari postingan Anda</item>
        <item>Mas Bro menyebut Anda dalam suatu postingan</item>
        <item>Farhan Kebab mengomentari postingan Anda</item>
        <item>Programmer Forum akan menyelenggarakan acara</item>
        <item>Pria Berbibir Tebal menyebut Anda dalam suatu postingan</item>
        <item>Bunda Rahma menanggapi postingan Anda</item>
        <item>Reza Kecap membagikan postingan Anda</item>
    </string-array>
    <string-array name="data_notification_time">
        <item>2023&#8211;06&#8211;21T01:10:57.082Z</item>
        <item>2023&#8211;06&#8211;20T01:10:57.082Z</item>
        <item>2023&#8211;06&#8211;19T01:10:57.082Z</item>
        <item>2023&#8211;06&#8211;18T01:10:57.082Z</item>
        <item>2023&#8211;06&#8211;17T01:10:57.082Z</item>
        <item>2023&#8211;06&#8211;16T01:10:57.082Z</item>
        <item>2023&#8211;06&#8211;15T01:10:57.082Z</item>
        <item>2023&#8211;06&#8211;14T01:10:57.082Z</item>
    </string-array>
    <string-array name="data_notification_post_id">
        <item>123456780</item>
        <item>123456781</item>
        <item>123456782</item>
        <item>123456783</item>
        <item>123456784</item>
        <item>123456785</item>
        <item>123456786</item>
        <item>123456787</item>
    </string-array>
    <string-array name="data_search_result_title">
        <item>Programmer Forum</item>
        <item>Programming Ajaib</item>
        <item>Android Programmer</item>
    </string-array>
    <string-array name="data_search_result_members">
        <item>7.3k</item>
        <item>200</item>
        <item>1.2k</item>
    </string-array>
    <string-array name="data_members_title">
        <item>Mas Bro</item>
        <item>Mas Bro</item>
        <item>Mas Bro</item>
        <item>Mas Bro</item>
        <item>Mas Bro</item>
        <item>Mas Bro</item>
        <item>Mas Bro</item>
        <item>Mas Bro</item>
        <item>Mas Bro</item>
        <item>Mas Bro</item>
    </string-array>
</resources>