<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".EmailCodeConfirmActivity">

    <TextView
        android:id="@+id/codeConfirmationTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/email_confirmation"
        android:textColor="@color/secondary_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/codeConfirmationDescTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/email_confirmation_description"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeConfirmationTitleTextView" />

    <TextView
        android:id="@+id/codeConfirmationPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/code_confirmation"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeConfirmationDescTextView" />

    <EditText
        android:id="@+id/emailInputSignInEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/white"
        android:hint="@string/code_confirmation_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_edit_text"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeConfirmationPasswordTextView" />

    <TextView
        android:id="@+id/clickableResendCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:text="@string/resend_code_with_time"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputSignInEditText" />

    <Button
        android:id="@+id/confirmEmailConfirmationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/secondary_color"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/confirm"
        android:textColor="@color/primary_color"
        app:layout_constraintBottom_toTopOf="@+id/passwordRememberedTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordRememberedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password_remembered"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/clickableSignInNowFWTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_in_now"
        android:textSize="16sp"
        android:textColor="@color/secondary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordRememberedTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>